--- a/src/pages/editgroup/editgroup.scss
+++ b/src/pages/editgroup/editgroup.scss
@@ -1,4 +1,4 @@
-page-creategroup {
+page-editgroup {
     .chat-icon{ width: auto; height: 30px !important;}
     .content{ background-color: #f2f2f2;}
     .form-part{ border-radius: 3px; background-color: #ffffff; padding-bottom: 1rem; }
