--- a/src/pages/eventserach/eventserach.scss
+++ b/src/pages/eventserach/eventserach.scss
@@ -1,4 +1,4 @@
-page-grouplist {
+page-eventserach {
     .toolbar-ios ion-title{padding: 0 10px 1px 27px;}
     .toolbar .searchbar-input{color:#fff;box-shadow:none;background:transparent !important; border-bottom:1px solid #fff; border-radius:0}
     .searchbar-input-container .searchbar-search-icon{background-image:url('../assets/imgs/search.png'); background-size:16px}
